--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,28 +108,14 @@ if (WIN32 OR (APPLE AND NOT IOS))
     endif()
 endif()
 
-# Find OpenUSD, and populate variables needed for building (e.g. PXR_INCLUDE_DIRS) and target names
-# (e.g. hdx, usdImaging) that can be used for assigning dependencies. See the PXR_LIBRARIES variable
+# Find OpenUSD if not defined already, and populate variables needed for building (e.g. PXR_INCLUDE_DIRS) and
+# target names (e.g. hdx, usdImaging) that can be used for assigning dependencies. See the PXR_LIBRARIES variable
 # for the full list of libraries.
 # NOTE: The special variable <package>_DIR is used by find_package(), so in this case we must
 # specify "pxr_DIR" because OpenUSD uses "pxr" as the package name.
-set(pxr_DIR ${OPENUSD_INSTALL_PATH})
-find_package(pxr REQUIRED NO_CMAKE_FIND_ROOT_PATH)
 if (NOT pxr_FOUND)
-    message(FATAL_ERROR "OpenUSD was not found.")
-endif()
-
-# If OpenUSD was built with Vulkan support, the Vulkan package is also required. We detect this by
-# checking for a specific directory in the OpenUSD install path.
-if (EXISTS "${OPENUSD_INSTALL_PATH}/lib/usd/hgiVulkan")
-    if (ANDROID)
-        find_package(Vulkan REQUIRED)
-    else()
-        find_package(Vulkan REQUIRED COMPONENTS shaderc_combined)
-    endif()
-    if (NOT Vulkan_FOUND)
-        message(FATAL_ERROR "Vulkan was not found.")
-    endif()
+    set(pxr_DIR ${OPENUSD_INSTALL_PATH})
+    find_package(pxr REQUIRED NO_CMAKE_FIND_ROOT_PATH)
 endif()
 
 #---------------------------------------------------------------------------------------------------
@@ -199,8 +185,10 @@ endif()
 
 add_subdirectory("source")
 
-if (ENABLE_TESTS)
-    enable_testing() #Initialize CTest here, before tests are added
+if (ENABLE_TESTS AND PROJECT_IS_TOP_LEVEL)
+    # Initialize CTest before adding test.
+    enable_testing()
+
     add_subdirectory("test")
 endif()
 
