OGSMOD-7340: Add version to shared library binary name on *nix platforms (#58)
Signed-off-by: Patrick Hodoul <patrick.hodoul@autodesk.com>

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -88,6 +88,16 @@ target_link_libraries(${_TARGET}
     PRIVATE ${_PRIVATE_LIBRARIES}
 )
 
+if (APPLE OR LINUX)
+    # Add version to binary name to let consumers define their binary compatibility expectations
+    # e.g. take libhvt.so.1 means that any minor or patch changes are fine.
+    set_target_properties(${_TARGET} 
+        PROPERTIES
+            VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}"
+            SOVERSION "${PROJECT_VERSION_MAJOR}"
+    )
+endif()
+
 #---------------------------------------------------------------------------------------------------
 
 # Prepare for creating relocatable packages.
