Move vcpkg logic out of the main cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ cmake_minimum_required(VERSION 3.16...3.31)
 # Add the path to the CMake helpers and import them.
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include(helpers)
+include(VcpkgSetup)
 
 # Variables that need to be set prior to the project definition.
 if (APPLE)
@@ -29,48 +30,6 @@ if (APPLE)
     set_if_not_defined(CMAKE_INSTALL_RPATH "@loader_path/" "")
     set_if_not_defined(CMAKE_INSTALL_RPATH_USE_LINK_PATH FALSE "")
     set_if_not_defined(CMAKE_MACOSX_RPATH ON "")
-endif()
-
-# Features to enable in vcpkg prior to the project definition.
-option(ENABLE_TESTS "Enable tests" OFF)
-if(ENABLE_TESTS)
-  list(APPEND VCPKG_MANIFEST_FEATURES "tests")
-endif()
-# Enable vcpkg USD feature only if no local USD path is provided
-if(NOT DEFINED OPENUSD_INSTALL_PATH)
-  list(APPEND VCPKG_MANIFEST_FEATURES "usd-build")
-endif()
-
-# VCPKG Bootstrap prior to the project definition.
-if(VCPKG_MANIFEST_FEATURES)
-    set(VCPKG_DIR "${CMAKE_CURRENT_LIST_DIR}/vcpkg")    
-    if(NOT EXISTS "${VCPKG_DIR}")
-        message(STATUS "vcpkg directory not found but vcpkg features were requested. Fetching submodules.")
-        execute_process(COMMAND git submodule update --init --recursive
-            WORKING_DIRECTORY "${CMAKE_CURRENT_LIST_DIR}")
-    endif()
-    # vcpkg executable is present if boostrap was already executed
-    if(WIN32)
-        if(NOT EXISTS "${VCPKG_DIR}/vcpkg.exe")
-            message(STATUS "Bootstrapping vcpkg (Windows)...")
-            execute_process(COMMAND cmd /c bootstrap-vcpkg.bat
-                WORKING_DIRECTORY "${VCPKG_DIR}")
-        endif()
-    else()
-        if(NOT EXISTS "${VCPKG_DIR}/vcpkg")
-            message(STATUS "Bootstrapping vcpkg (Unix)...")
-            execute_process(COMMAND ./bootstrap-vcpkg.sh
-                WORKING_DIRECTORY "${VCPKG_DIR}")
-        endif()
-    endif()
-    # Define the toolchain if it was not already defined in the command line
-    if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
-        set(CMAKE_TOOLCHAIN_FILE "${VCPKG_DIR}/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
-    endif()
-    # Overlay ports are there to change the default behavior of vcpkg on standard ports or add new ports.
-    set(VCPKG_OVERLAY_PORTS "${CMAKE_CURRENT_LIST_DIR}/overlay-ports")
-else()
-    message(STATUS "Not using vcpkg for hydra-viewport-toolbox because no dependencies requested...")
 endif()
 
 # Declare the project.
